millen11- fixed sizing and spacing issues.

--- a/lab3/application.css
+++ b/lab3/application.css
@@ -20,6 +20,14 @@
   color: #00ffff;
 }
 
+.titles a {
+  color: black;
+}
+
+.titles a:hover {
+  color: #00ffff;
+}
+
 /* Background and fonts */
 body {
   /* background-color: #cbc3e3; */
@@ -77,7 +85,7 @@ tr td {
   padding-top: 10px;
   padding-left: 5%;
   padding-bottom: 10%;
-  margin: 10% 5% 10% 5%;
+  margin: 10% 0% 10% 3%;
 }
 
 /* Temperature Container */
@@ -96,8 +104,9 @@ tr td {
 #article1img,
 #article2img,
 #article3img {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  border: 3px solid #00ffff;
+  width: 300px;
 }
 
 #article1title,
@@ -111,6 +120,7 @@ tr td {
   float: right;
   padding-left: none;
   margin: none;
+  width: 500px;
 }
 
 /* Time Data Fetched */
@@ -119,6 +129,7 @@ tr td {
   padding-top: 10%;
   font-size: small;
   text-align: end;
+  margin-right: 50px;
   float: left;
 }
 
